<resources>
    <string name="app_name" translatable="false">Water Health</string>

    <string name="list">Stations</string>
    <string name="grid">Grid</string>
    <string name="map">Map</string>
    <string name="icon">Icon</string>
    <string name="select_station">Select a station</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection">Connection to the server…</string>
    <string name="water_station">Probe station</string>
    <string name="tabLayout">Tab layout</string>
    <string name="indietro">Back</string>
    <string name="data_error">Unable to download data!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="dettagli_stazione">Station info</string>
    <string name="dati">Data collected</string>
    <string name="dati_in_tempo_reale">Live data</string>
    <string name="non_ci_sono_dati_rececenti">There is no recent data!</string>
    <string name="luogo">Position:</string>
    <string name="sensor">Sensors:</string>
    <string name="telefono">Phone:</string>
    <string name="date_range">--Select a date range--</string>
    <string name="scegli_un_range_di_tempo">Select the dates</string>
    <string name="chip">chip</string>
    <string name="tipo">Type</string>
    <string name="data_e_ora">Date and time</string>
    <string name="valore">Value</string>
    <string name="no_data_available">No data available</string>
    <string name="solo_un_momento">Just a moment...</string>
    <string name="loader">Loader</string>
    <string name="univaq">UNIVAQ -  University of L\'Aquila</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

</resources>