<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Stations">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/title"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeTextType="uniform"
            android:elevation="10dp"
            android:gravity="center|start"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimaryVariant"
        android:contentDescription="@string/tabLayout"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:tabGravity="fill"
        app:tabIconTint="?attr/colorOnPrimary"
        app:tabIndicator="@drawable/menu_item_background"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="stretch"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        app:tabTextColor="?attr/colorOnPrimary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:icon="@drawable/list"
            android:paddingHorizontal="5dp"
            android:text="@string/list" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:icon="@drawable/map"
            android:paddingHorizontal="5dp"
            android:text="@string/map" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>