<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StationDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stationDetailsToolbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeTextType="uniform"
            android:elevation="10dp"
            android:gravity="center|start"
            android:minWidth="200dp"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon_foreground"
            app:layout_constraintEnd_toStartOf="@+id/title"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/indietro"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stationDetailsTabContainer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationDetailsToolbar">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/stationDetailsTabLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tabLayout"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="fill"
            app:tabIconTint="?attr/colorOnPrimary"
            app:tabIndicator="@drawable/indicator"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabTextColor="?attr/colorOnPrimary">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:icon="@drawable/info"
                android:text="@string/dettagli_stazione" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:icon="@drawable/data"
                android:text="@string/dati"
                tools:ignore="VisualLintLocaleText" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/stationDetailsViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationDetailsTabContainer" />

    <ProgressBar
        android:id="@+id/stationDetailsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationDetailsTabContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>